controller(api): new "GET /vms/{name}/exec" WebSocket-based endpoint
